--- a/lecture/src/App.css
+++ b/lecture/src/App.css
@@ -2,27 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.main-header {
+  background: rgb(22, 146, 84);
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 10px 2px;
+  box-shadow: 0 0 10px 5px rgba(2,2,2,0.25);
 }
