--- a/game/src/index.css
+++ b/game/src/index.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Gothic+A1:300,400,700');
+
+html {
+  box-sizing: border-box;
+  min-height: 100%;
+  font-size: 10px
+}
+
+*,*::after,*::before {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Gothic A1',sans-serif;
 }
