--- a/game/src/App.css
+++ b/game/src/App.css
@@ -58,3 +58,19 @@
   cursor: pointer;
   font-size: 1.75rem;
 }
+
+.after {
+  width: 85%;
+  border-radius: 5px;
+  margin: 0.5rem auto;
+  text-align: center;
+  height: 100%;
+}
+
+.right {
+  background: rgba(37, 167, 70, 0.7);
+}
+
+.wrong {
+  background: rgba(187, 6, 21, 0.7);
+}
