--- a/game/src/App.css
+++ b/game/src/App.css
@@ -65,6 +65,9 @@
   margin: 0.5rem auto;
   text-align: center;
   height: 100%;
+  animation-name: fade-in;
+  animation-timing-function: linear;
+  animation-duration: 0.55s;
 }
 
 .right {
@@ -73,4 +76,16 @@
 
 .wrong {
   background: rgba(187, 6, 21, 0.7);
+}
+
+@keyframes fade-in {
+  0%{
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100%{
+    opacity: 1;
+  }
 }
