--- a/easy-abc/src/App.css
+++ b/easy-abc/src/App.css
@@ -54,4 +54,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 3rem;
+}
+
+.field:first-child img {
+  width: 15rem;
+  height: 15rem;
 }
